Fixed bottom layout issues

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -256,39 +256,39 @@
             <div class="row">
                 <div class="col-">
 
-                    <legend class="c-txt__label u-pt u-pl-sm">Very complex issue to you: 1 (low) - 5 (high)</legend>
+                    <legend class="c-txt__label u-pt-lg u-pl-sm">Very complex issue to you: 1 (low) - 5 (high)</legend>
                 </div>
-                <div class="row u-pt-xxs u-pl-sm">
+                <div class="row u-pl-sm u-pt-lg">
                     <div class="col-">
-                        <div class="c-chk u-pl-sm u-pt">
+                        <div class="c-chk u-pl-sm u-pt-xxs">
                             <input class="c-chk__input" id="diff1" name="name" type="radio">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="diff1">1
                             </label>
                         </div>
                     </div>
                     <div class="col-">
-                        <div class="c-chk u-pl-sm u-pt">
+                        <div class="c-chk u-pl-sm u-pt-xxs">
                             <input class="c-chk__input" id="diff2" name="name" type="radio">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="diff2">2
                             </label>
                         </div>
                     </div>
                     <div class="col-">
-                        <div class="c-chk u-pl-sm u-pt">
+                        <div class="c-chk u-pl-sm u-pt-xxs">
                             <input class="c-chk__input" id="diff3" name="name" type="radio">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="diff3">3
                             </label>
                         </div>
                     </div>
                     <div class="col-">
-                        <div class="c-chk u-pl-sm u-pt">
+                        <div class="c-chk u-pl-sm u-pt-xxs">
                             <input class="c-chk__input " id="diff4" name="name" type="radio">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular " for="diff4">4
                             </label>
                         </div>
                     </div>
                     <div class="col-">
-                        <div class="c-chk u-pl-sm u-pt">
+                        <div class="c-chk u-pl-sm u-pt-xxs">
                             <input class="c-chk__input" id="diff5" name="name" type="radio">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="diff5">5
                             </label>
@@ -298,7 +298,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="container-fluid">
-                        <div class="c-txt u-pt-sm float-right u-bg-kale-150">
+                        <div class="c-txt u-pt-sm u-pl-sm u-bg-kale-150">
                             <small class="c-txt__hint">Set by:</small>
                             <label class="c-txt__label u-bg-kale-200 u-br-xl">John Smith III</label>
 
