--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -28,10 +28,10 @@
 
     <script>
         var client = ZAFClient.init();
-        client.invoke('resize', {
-            width: '800px',
-            height: '660px'
-        });
+        // client.invoke('resize', {
+        //     width: '800px',
+        //     height: '660px'
+        // });
     </script>
 </head>
 
@@ -47,13 +47,14 @@
             </div>
         </div>
     </div>
+    <hr>
     </div>
 
     <form>
         <div class="container-fluid">
             <div class="row">
                 <!--APIs-->
-                <div class="col-md-4 u-br-xl u-bg-kale-100 ">
+                <div class="col-md-4  ">
                     <fieldset>
                         <legend class="c-txt__label u-mt-xs ">APIs</legend>
                         <div class="c-chk u-mb-xxs" id="chk">
@@ -90,7 +91,7 @@
 
                 </div>
                 <!--Mobile SDK tools-->
-                <div class="col-md-4 u-br-xl u-bg-blue-100">
+                <div class="col-md-4 ">
                     <fieldset>
                         <legend class="c-txt__label u-mt-xs">Mobile SDks</legend>
                         <div class="c-chk u-mb-xxs">
@@ -119,7 +120,7 @@
 
                 </div>
                 <!--Other tools-->
-                <div class="col-md-4 u-br-xl u-bg-grey-100">
+                <div class="col-md-4 ">
                     <fieldset>
                         <legend class="c-txt__label u-mt-xs ">Other</legend>
                         <div class="c-chk u-mb-xxs">
@@ -160,11 +161,12 @@
                     </fieldset>
                 </div>
             </div>
+            <hr>
         </div>
         <div class="container-fluid">
             <div class="row">
                 <!--ZAF tools-->
-                <div class="col-md-4 u-br-xl u-bg-yellow-100">
+                <div class="col-md-4 ">
                     <fieldset>
                         <legend class="c-txt__label u-mt-xs">Apps Framework development</legend>
                         <div class="c-chk u-mb-xxs">
@@ -188,7 +190,7 @@
 
                 </div>
                 <!--Sunshine tools-->
-                <div class="col-md-4  u-br-xl u-bg-red-100">
+                <div class="col-md-4  ">
                     <fieldset>
                         <legend class="c-txt__label u-mt-xs">Sunshine</legend>
                         <div class="c-chk u-mb-xxs">
@@ -214,7 +216,7 @@
                     </fieldset>
                 </div>
                 <!--Widget tools-->
-                <div class="col-md-4 u-br-xl u-bg-green-100">
+                <div class="col-md-4 ">
                     <fieldset>
                         <legend class="c-txt__label u-mt-xs">Widget</legend>
                         <div class="c-chk u-mb-xxs">
@@ -230,11 +232,11 @@
                     </fieldset>
 
 
-
                 </div>
-
             </div>
+            
         </div>
+
         <!--Additional comments/other platform tools-->
         <div class="container-fluid">
             <div class="row">
@@ -299,7 +301,7 @@
                     <div class="container-fluid">
                         <div class="c-txt u-pt-sm u-pl-sm u-bg-kale-150">
                             <small class="c-txt__hint">Set by:</small>
-                            <label class="c-txt__label u-bg-kale-200 u-br-xl">John Smith III</label>
+                            <label class="c-txt__label">John Smith III</label>
 
                         </div>
                     </div>
