Adding styles.css

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -190,7 +190,7 @@
 
                 </div>
                 <!--Sunshine tools-->
-                <div class="col-md-4  ">
+                <div class="col-md-4  u-br-xl u-bg-red-110">
                     <fieldset>
                         <legend class="c-txt__label u-mt-xs">Sunshine</legend>
                         <div class="c-chk u-mb-xxs">
