Added functionality to grab ticket ID globally and create records

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -22,7 +22,8 @@
 </head>
 
 <body>
-    <form enctype="multipart/form-data" method="POST" name="devHelper">
+
+    <form enctype="multipart/form-data" method="POST" id="devHelper" name="devHelper">
         <div class="container-fluid">
             <div class="row justify-content-between">
                 <!--Header + reset link-->
@@ -44,33 +45,33 @@
                     <legend class="c-txt__label u-mt-xs ">APIs</legend>
                     <div class="u-mb-xxs">
                         <div>
-                            <input class="c-chk__input" id="id-1" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-1">Support
+                            <input class="c-chk__input" id="id-100" name="devPlatform" type="radio" value="100">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-100">Support
                                 API</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-2" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-2">Chat
+                            <input class="c-chk__input" id="id-101" name="devPlatform" type="radio" value="101">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-101">Chat
                                 API</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-3" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-3">Talk
+                            <input class="c-chk__input" id="id-102" name="devPlatform" type="radio" value="102">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-102">Talk
                                 API</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-4" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-4">Chat
+                            <input class="c-chk__input" id="id-103" name="devPlatform" type="radio" value="103">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-103">Chat
                                 Conversations API</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-5" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-5">Guide
+                            <input class="c-chk__input" id="id-104" name="devPlatform" type="radio" value="104">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-104">Guide
                                 API</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-6" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-6">Sell
+                            <input class="c-chk__input" id="id-105" name="devPlatform" type="radio" value="105">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-105">Sell
                                 API</label>
                         </div>
                     </div>
@@ -80,27 +81,27 @@
                     <legend class="c-txt__label u-mt-xs">Mobile SDKs</legend>
                     <div class="u-mb-xxs">
                         <div>
-                            <input class="c-chk__input" id="id-7" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-7">Chat
+                            <input class="c-chk__input" id="id-140" name="devPlatform" type="radio" value="140">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-140">Chat
                                 SDK -
                                 iOS</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-8" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-8">Chat
+                            <input class="c-chk__input" id="id-141" name="devPlatform" type="radio" value="141">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-141">Chat
                                 SDK -
                                 Android</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-9" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-9">Support
+                            <input class="c-chk__input" id="id-142" name="devPlatform" type="radio" value="142">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-142">Support
                                 SDK
                                 -
                                 iOS</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-10" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-10">Support
+                            <input class="c-chk__input" id="id-143" name="devPlatform" type="radio" value="143">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-143">Support
                                 SDK -
                                 Android</label>
                         </div>
@@ -111,39 +112,39 @@
                     <legend class="c-txt__label u-mt-xs ">Other</legend>
                     <div class="u-mb-xxs">
                         <div>
-                            <input class="c-chk__input" id="id-14" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-14">Sponsored
+                            <input class="c-chk__input" id="id-200" name="devPlatform" type="radio" value="200">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-200">Sponsored
                                 dev
                                 account</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-15" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-15">Getting
+                            <input class="c-chk__input" id="id-201" name="devPlatform" type="radio" value="201">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-201">Getting
                                 app
                                 published</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-16" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-16">Global
+                            <input class="c-chk__input" id="id-202" name="devPlatform" type="radio" value="202">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-202">Global
                                 OAuth
                                 client
                             </label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-23" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-23">API
+                            <input class="c-chk__input" id="id-203" name="devPlatform" type="radio" value="203">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-203">API
                                 Clients</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-24" name="devPlatform" type="radio">
+                            <input class="c-chk__input" id="id-204" name="devPlatform" type="radio" value="204">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular"
-                                for="id-24">Guide/Gather
+                                for="id-204">Guide/Gather
                                 customization</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-25" name="devPlatform" type="radio">
+                            <input class="c-chk__input" id="id-205" name="devPlatform" type="radio" value="205">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular"
-                                for="id-25">Other</label>
+                                for="id-205">Other</label>
                         </div>
                     </div>
                 </div>
@@ -156,19 +157,19 @@
                     <legend class="c-txt__label u-mt-xs">Apps Framework development</legend>
                     <div class="u-mb-xxs">
                         <div>
-                            <input class="c-chk__input" id="id-11" name="devPlatform" type="radio">
+                            <input class="c-chk__input" id="id-120" name="devPlatform" type="radio" value="120">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular"
-                                for="id-11">Support</label>
+                                for="id-120">Support</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-12" name="devPlatform" type="radio">
+                            <input class="c-chk__input" id="id-121" name="devPlatform" type="radio" value="121">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular"
-                                for="id-12">Chat</label>
+                                for="id-121">Chat</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-13" name="devPlatform" type="radio">
+                            <input class="c-chk__input" id="id-122" name="devPlatform" type="radio" value="122">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular"
-                                for="id-13">Sell</label>
+                                for="id-122">Sell</label>
                         </div>
                     </div>
                 </div>
@@ -177,24 +178,24 @@
                     <legend class="c-txt__label u-mt-xs">Sunshine</legend>
                     <div class="u-mx-xxs">
                         <div>
-                            <input class="c-chk__input" id="id-19" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-19">Custom
+                            <input class="c-chk__input" id="id-160" name="devPlatform" type="radio" value="160">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-160">Custom
                                 Objects</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-20" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-20">Events
+                            <input class="c-chk__input" id="id-161" name="devPlatform" type="radio" value="161">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-161">Events
                                 and
                                 Profiles</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-21" name="devPlatform" type="radio">
+                            <input class="c-chk__input" id="id-162" name="devPlatform" type="radio" value="162">
                             <label class="c-chk__label c-chk__label--radio c-chk__label--regular"
-                                for="id-21">Conversations</label>
+                                for="id-162">Conversations</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-22" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-22">AWS
+                            <input class="c-chk__input" id="id-163" name="devPlatform" type="radio" value="163">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-163">AWS
                                 Events
                                 BridgeChannels Framework</label>
                         </div>
@@ -205,13 +206,13 @@
                     <legend class="c-txt__label u-mt-xs">Widget</legend>
                     <div class="u-mb-xxs">
                         <div>
-                            <input class="c-chk__input" id="id-17" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-17">Widget
+                            <input class="c-chk__input" id="id-180" name="devPlatform" type="radio" value="180">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-180">Widget
                                 API</label>
                         </div>
                         <div>
-                            <input class="c-chk__input" id="id-18" name="devPlatform" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-18">Web
+                            <input class="c-chk__input" id="id-181" name="devPlatform" type="radio" value="181">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="id-181">Web
                                 SDK</label>
                         </div>
                     </div>
@@ -240,37 +241,38 @@
                 <div class="row u-pl-sm u-pt-lg">
                     <div class="col-">
                         <div class="u-pl-sm u-pt-xxs">
-                            <input class="c-chk__input" id="diff1" name="complexity" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="diff1">1
+                            <input class="c-chk__input" id="complexity1" name="devComplexity" type="radio" value="1">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="complexity1">1
                             </label>
                         </div>
                     </div>
                     <div class="col-">
                         <div class="u-pl-sm u-pt-xxs">
-                            <input class="c-chk__input" id="diff2" name="complexity" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="diff2">2
+                            <input class="c-chk__input" id="complexity2" name="devComplexity" type="radio" value="2">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="complexity2">2
                             </label>
                         </div>
                     </div>
                     <div class="col-">
                         <div class="u-pl-sm u-pt-xxs">
-                            <input class="c-chk__input" id="diff3" name="complexity" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="diff3">3
+                            <input class="c-chk__input" id="complexity3" name="devComplexity" type="radio" value="3">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="complexity3">3
                             </label>
                         </div>
                     </div>
                     <div class="col-">
                         <div class="u-pl-sm u-pt-xxs">
-                            <input class="c-chk__input " id="diff4" name="complexity" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular " for="diff4">4
+                            <input class="c-chk__input " id="complexity4" name="devComplexity" type="radio" value="4">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular " for="complexity4">4
                             </label>
                         </div>
                     </div>
                     <div class="col-">
                         <div class="u-pl-sm u-pt-xxs">
-                            <input class="c-chk__input" id="diff5" name="complexity" type="radio">
-                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="diff5">5
+                            <input class="c-chk__input" id="complexity5" name="devComplexity" type="radio" value="5">
+                            <label class="c-chk__label c-chk__label--radio c-chk__label--regular" for="complexity5">5
                             </label>
+                            <input type="button" value="Get value">
                         </div>
                     </div>
                 </div>
@@ -289,7 +291,7 @@
         <div class="row">
             <div class="col-xl">
                 <div class="l-btn-group float-right u-pr-sm u-pb-sm u-pt-sm">
-                    <button class="c-btn c-btn--sm c-btn--pill c-btn--primary"><strong
+                    <button class="c-btn c-btn--sm c-btn--pill c-btn--primary" id="saveButton"><strong
                             class="u-semibold">Save</strong></button>
                     <button class="c-btn c-btn--sm c-btn--pill c-btn--muted"><strong
                             class="u-semibold">Cancel</strong></button>
@@ -297,8 +299,8 @@
             </div>
         </div>
     </form>
-    <button onclick="testButton()">Click me</button>
     <label id=sidebar_data></label>
+    <input type="button" onclick="testButton()" value="Check or create CR record">
 </body>
 
 </html>
