--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -230,7 +230,7 @@
                 <div class="col-xl">
                     <div class="c-txt">
                         <label class="c-txt__label" for="addlTxt">Additional info</label>
-                        <input class="c-txt__input" id="addlTxt" type="text"
+                        <input class="c-txt__input" id="addlTxt" type="text" name="addInfo"
                             placeholder="Add any additional comments here">
                     </div>
                 </div>
